# ioruba

./: .gitignore  .impeccable.md  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUNDING.md  GITHUB_SETUP.md  LICENSE  Makefile  NANO_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  TODO.md  cabal.project.local  package-lock.json  package.json  package.yaml  stack.yaml  tsconfig.base.json
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/scripts/: build_pages.py
.github/workflows/: ci.yml  codeql.yml  docs-autoupdate.yml  pages-docs.yml  pages.yml  release-please.yml  release.yml  secrets.yml  sync-metadata.yml
.serena/: project.yml
app/: Main.hs
app/gui/: Main.hs
app/test-serial/: Main.hs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  watch.rs
apps/desktop/src-tauri/src/audio/: common.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
arduino/iaruba-mixer/: iaruba-mixer.ino
arduino/iaruba-nano-3knobs/: iaruba-nano-3knobs.ino
arduino/ioruba-mixer/: ioruba-mixer.ino
arduino/ioruba-nano-3knobs/: ioruba-nano-3knobs.ino
assets/: iaruba.desktop  ioruba.desktop
config/: ioruba.yaml  nano-3knobs.yaml
config/profiles/: gaming.yaml
docs/: config.yaml  index.md  roadmap.md
docs-site/: 404.md  _config.yml  index.md
docs-site/_data/: navigation.yml
docs-site/_layouts/: default.html  doc.html  home.html
docs-site/assets/: site.css
docs-site/guides/: getting-started.md
docs/debug/: support.md
docs/guides/: audio-backend-contract.md  hardware-setup.md  profile-examples.md  translation-guide.md
docs/migration/: complete-plan.md  github-plan.md  logic-audit.md
docs/plans/: 2026-07-09-shell-ui-refresh.md
legacy/: README.md
legacy/arduino-audio-controller/: README.md  WARP.md  arduino_audio_controller.ino  audio-controller.desktop  audio_controller.py  audio_controller_gui.py  audio_controller_gui_wrapper.sh  install_local.sh  requirements.txt
legacy/github-automation/: README.md
legacy/haskell-runtime/: CLAUDE.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  demo-gui.html  package.yaml  stack.yaml
scripts/: arduino-simulator.py  build-pages.mjs  install.ps1  install.sh  run-appimage-compat.sh  validate-appimage.sh
scripts/release/: build_arch_package.sh  build_release_artifacts.sh
src/App/: I18n.hs  Options.hs  Settings.hs
src/Audio/: PulseAudio.hs  Sink.hs  Source.hs
src/Config/: Parser.hs  Profiles.hs  Types.hs  Validation.hs
src/Docs/: Generator.hs  Interactive.hs
src/GUI/: App.hs  Bridge.hs  MainWindow.hs  Settings.hs  Themes.hs  Visualizer.hs
src/Hardware/: Device.hs  Protocol.hs  Serial.hs
src/TUI/: App.hs  MainWindow.hs
src/Tasks/: Manager.hs  Notifications.hs  Persistence.hs
src/Utils/: Error.hs  Logging.hs
test/App/: OptionsSpec.hs
test/Audio/: MixerSpec.hs
test/Config/: ParserSpec.hs  ValidationSpec.hs
test/GUI/: StateSpec.hs
(+121 files in other folders)
