[package]
name = "ioruba-desktop"
version = "0.4.0"
description = "Ioruba desktop control deck"
authors = ["Bernardo Gomes"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ioruba_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-serialplugin = "2.21.1"
thiserror = "2.0"

[patch.crates-io]
# Linux Tauri still pulls gtk-rs GTK3 through wry/webkit2gtk. Upstream fixed
# GHSA-wrw7-89jp-8q8g in glib >= 0.20, but the current Tauri Linux stack is on
# glib 0.18.x, so we backport the one-line fix locally until upstream moves.
glib = { path = "vendor/glib-0.18.5" }
