[package]
name = "ioruba-desktop"
version = "0.6.7"
description = "Ioruba desktop control deck"
authors = ["Bernardo Gomes"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ioruba_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-serialplugin = "2.22.0"
thiserror = "2.0"

[patch.crates-io]
# Linux Tauri still pulls gtk-rs GTK3 through wry/webkit2gtk. Upstream fixed
# GHSA-wrw7-89jp-8q8g in glib >= 0.20, but the current Tauri Linux stack is on
# glib 0.18.x, so we backport the one-line fix locally until upstream moves.
glib = { path = "vendor/glib-0.18.5" }

# Patch PHF generator to a local backport that uses rand 0.9, eliminating the
# vulnerable rand 0.7.x line pulled by the legacy phf tooling chain.
phf_generator = { path = "vendor/phf_generator-0.8.0" }
