[package]
name = "ioruba-desktop"
version = "1.4.0"
description = "Ioruba desktop control deck"
authors = ["Bernardo Gomes"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ioruba_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-serialplugin = "2.22.0"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
] }

[patch.crates-io]
# Linux Tauri still pulls gtk-rs GTK3 through wry/webkit2gtk. Upstream fixed
# GHSA-wrw7-89jp-8q8g in glib >= 0.20, but the current Tauri Linux stack is on
# glib 0.18.x, so we backport the one-line fix locally until upstream moves.
glib = { path = "vendor/glib-0.18.5" }
